tests/compile-fail/interned_configuration_fields_not_salsa_value.stderr
error: incompatible lifetime on type
  --> tests/compile-fail/interned_configuration_fields_not_salsa_value.rs:11:24
   |
11 |     type Fields<'db> = &'db u32;
   |                        ^^^^^^^^
   |
note: because this has an unmet lifetime requirement
  --> src/interned.rs
   |
   |     type Fields<'db>: InternedData + crate::SalsaValue;
   |                                      ^^^^^^^^^^^^^^^^^ introduces a `'static` lifetime requirement
note: the lifetime `'db` as defined here...
  --> tests/compile-fail/interned_configuration_fields_not_salsa_value.rs:11:17
   |
11 |     type Fields<'db> = &'db u32;
   |                 ^^^
note: ...does not necessarily outlive the static lifetime introduced by the compatible `impl`
  --> src/salsa_value.rs
   |
   | unsafe impl<T: ?Sized> SalsaValue for &'static T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
